--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/vscode,python,django
-# Edit at https://www.toptal.com/developers/gitignore?templates=vscode,python,django
+# Created by https://www.toptal.com/developers/gitignore/api/vscode,macos,python,django
+# Edit at https://www.toptal.com/developers/gitignore?templates=vscode,macos,python,django
 
 ### Django ###
 *.log
@@ -159,6 +159,35 @@ Thumbs.db
 .prof
 
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 
@@ -227,13 +256,13 @@ Thumbs.db
 
 # profiling data
 
-
-### vscode ###
 .vscode
+### vscode ###
+.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
 
-# End of https://www.toptal.com/developers/gitignore/api/vscode,python,django
+# End of https://www.toptal.com/developers/gitignore/api/vscode,macos,python,django
